# EthosMCP

./: .env.example  .gitignore  ARCHITECTURE.md  AUDITING_FRAMEWORK.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FRAMEWORK_GOVERNANCE.md  GOVERNANCE.md  LICENSE  Makefile  README.md  README.md copy  config.yaml  docker-compose copy.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  help_wanted.md
.github/workflows/: ci.yml  release.yml
api/: Dockerfile  main.py  requirements.txt
api/models/: audit_models.py  certificate_models.py
api/routers/: audit.py  certificates.py  health.py
api/services/: adversarial_tester.py  bias_engine.py  certificate_issuer.py  dpia_generator.py  drift_monitor.py  oversight_verifier.py  risk_classifier.py  supply_chain.py  weighted_scorer.py
api/tests/: test_services.py
audit-engines/: requirements.txt
audit-engines/phase3_risk/: annex3_checker.py  classifier.py  conformity_path.py
audit-engines/phase4_privacy/: dpdp_checker.py  dpia_engine.py  privacy_by_design.py
audit-engines/phase5_bias/: aif360_runner.py  fairlearn_runner.py  threshold_policy.py
audit-engines/phase6_security/: adversarial.py  data_minimisation.py  input_validation.py
audit-engines/phase7_explain/: lime_runner.py  report_builder.py  shap_runner.py
audit-engines/phase8_certify/: credential_builder.py  revocation.py  signer.py  timestamp.py
audit-engines/phase9_monitor/: alert_engine.py  drift_detector.py  metrics_collector.py
bias-engine/: metrics.py  protected_classes.json  requirements.txt  scanner.py
certificate-store/: credential_template.json  vc_issuer.py  vc_schema.json  verifier.py
crypto/did/: keygen.py  resolver.py
crypto/kms/: local_kms.py  vault_client.py
crypto/merkle/: anchor.py  tree.py
data/: consent_registry.json  data_flow_map.json  dataset_purpose_registry.json  ropa_records.json  security_config.json
db/neo4j/: schema.cypher  seed.cypher
db/postgres/: schema.sql
deploy/: docker-compose.prod.yml  docker-compose.yml
deploy/docker/: Dockerfile.audit-engines  Dockerfile.mcp-server  Dockerfile.orchestrator
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  PHASE_GUIDE.md  REGULATORY_MAPPING.md  architecture.md  compliance_mapping.md  deployment.md
docs/diagrams/: cert-lifecycle.mmd  data-flow.mmd  pipeline-overview.mmd
drift-detection/: monitor.py  reaudit_trigger.py  requirements.txt  statistical_tests.py
ethosmcp-server/: server.py
evidence-store/: queries.sql  schema.sql
evidence-store/migrations/: 001_initial.sql
examples/: claude_desktop_config.json
mcp-server/: Dockerfile  jest.config.ts  mcp.json  package.json  tsconfig.json
mcp-server/src/: index.ts  server.ts
mcp-server/tests/: tools.test.ts
orchestrator/: pyproject.toml  requirements.txt
orchestrator/app/: config.py  logger.py  main.py
orchestrator/app/db/: neo4j.py  postgres.py  redis.py
orchestrator/app/events/: consumer.py  producer.py
orchestrator/app/models/: certificate.py  regulatory.py  run.py
orchestrator/app/routers/: audit.py  certificate.py  dsar.py  ropa.py
orchestrator/app/state_machine/: dependency.py  pipeline.py  reaudit.py
provenance-graph/: schema.cypher  seed_data.cypher
provenance-graph/queries/: ip_risk_score.cypher  lineage_trace.cypher
schemas/: w3c_audit_credential.jsonld
schemas/regulatory/: dpdp_sections.json  eu_ai_act_annex3.json  gdpr_articles.json
schemas/tool_schemas/: phase1_register.schema.json  phase2_scope.schema.json  phase3_classify.schema.json  phase4_privacy.schema.json  phase5_bias.schema.json  phase6_security.schema.json  phase7_explain.schema.json  phase8_certify.schema.json  phase9_monitor.schema.json
src/: __init__.py  cli.py  config.py  main.py  mcp_app.py  models.py  server.py
src/config/: settings.py
src/models/: __init__.py  audit.py  consent.py  dsar.py  eu_ai_act.py  ropa.py  workflow.py
src/prompts/: __init__.py  contexts.py  system_templates.py  user_prompts.py
src/regulatory/: dpdp.py  iso_42001.py
src/schemas/: dpdp_parameters.py  eu_ai_act.py  gdpr_audit.py
src/services/: audit_log.py  data_purpose.py  discovery.py  governance.py  oauth.py  (+3 more)
tests/: conftest.py  test_audit_workflow.py  test_crypto_integration.py  test_data_purpose.py  test_enhanced_compliance.py  test_governance.py  test_localization.py  test_security.py  test_server_http.py  test_sovereignty.py  test_workflow_runtime.py
webhook-engine/: publisher.py  subscriber.py
(+70 files in other folders)
