[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-compliance-orchestrator"
version = "1.0.0"
description = "Python FastAPI orchestrator for the 9-phase AI compliance audit pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "neo4j>=5.15.0",
    "nats-py>=2.6.0",
    "redis[asyncio]>=5.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23.0", "httpx>=0.26.0"]
bias = ["fairlearn>=0.10.0", "aif360>=0.6.0", "scikit-learn>=1.4.0"]
explain = ["shap>=0.44.0", "lime>=0.2.0.1"]
security = ["adversarial-robustness-toolbox>=1.17.0"]
crypto = ["cryptography>=42.0.0", "base58>=2.1.0"]
all = ["ai-compliance-orchestrator[dev,bias,explain,security,crypto]"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
